--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
   "bot-account": {
     "username": "Vanir",
     "password": "",
-    "type": "microsoft"
+    "type": "mojang"
   },
 
   "server": {
